# cvcamera

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/anishitani/cvcamera/: AutoFitTextureView.java  CameraActivity.java  CameraPreviewFragment.java  JNIInterface.java
app/src/main/java/org/duckdns/anishitani/cvcamera/: AutoFitTextureView.java  CameraActivity.java  CameraPreviewFragment.java
app/src/main/res/layout/: activity_camera.xml  fragment_camera2_basic.xml
app/src/main/res/layout-land/: fragment_camera2_basic.xml
app/src/main/res/values/: base-strings.xml
